--- a/redwoods.html
+++ b/redwoods.html
@@ -20,12 +20,14 @@
 	<center>
 		<a href="http://kironroy.github.io"><img alt="Kiron Roy Logo" src="logo_redwood.svg" style="width:110px;height:110px;"></a>
 	</center>
+	<center><h1>Redwood Guide<h1></center>
 	<br>
 	<div class="tabs" data-tabs="">
 		<div class="tab">
 			<input checked id="tab-1" name="tabgroup" type="radio"> <label for="tab-1">Books</label>
 			<div class="tab__content">
-				<h3><i aria-hidden="true" class="fa fa-book"></i> Books</h3>
+				<br>
+				<h2><i aria-hidden="true" class="fa fa-book"></i> Books</h2>
 				<p><em><a href="http://jaredfarmer.net/books/trees-in-paradise/">Trees in Paradise: A California History</a></em></p><em></em>
 				<p><em><a href="https://en.wikipedia.org/wiki/The_Wild_Trees">The Wild Trees</a></em></p><em></em>
 				<p><em><a href="http://www.goodreads.com/book/show/695012.The_Last_Stand">The Last Stand: The War Between Wall Street and Main Street over California's Ancient Redwoods
@@ -41,7 +43,8 @@
 		<div class="tab">
 			<input id="tab-2" name="tabgroup" type="radio"> <label for="tab-2">Links</label>
 			<div class="tab__content">
-				<h3><i aria-hidden="true" class="fa fa-link"></i> Links</h3>
+				<br>
+				<h2><i aria-hidden="true" class="fa fa-link"></i> Links</h2>
 				<p><strong><a href="https://kironroy.github.io/comic">My Forest Trip!</a></strong></p>
 				<p><a href="https://repl.it/DbdW/12/">Redwoods Ruby programming</a></p>
 				<p><a href="http://www.mdvaden.com/redwood_hyperion.shtml">Hyperion Coast Redwood</a></p>
@@ -56,7 +59,8 @@
 		<div class="tab">
 			<input id="tab-3" name="tabgroup" type="radio"> <label for="tab-3">Maps</label>
 			<div class="tab__content">
-				<h3><i aria-hidden="true" class="fa fa-map"></i> Maps</h3>
+				<br>
+				<h2><i aria-hidden="true" class="fa fa-map"></i> Maps</h2>
 				<p><a href="http://famousredwoods.com/">All Redwoods</a></p>
 				<p><a href="https://www.google.com/maps/place/41%C2%B012'17.7%22N+124%C2%B000'56.0%22W/@41.20491,-124.0177487,689m/data=!3m2!1e3!4b1!4m5!3m4!1s0x0:0x0!8m2!3d41.20491!4d-124.01556">Hyperion Tree</a></p>
 				<p><a href="http://www.mendorailhistory.org/images/redwoods/NG_MapofRedwoods_lg.jpg">NATGEO Map (jpg)</a></p>
@@ -71,7 +75,8 @@
 		<div class="tab">
 			<input id="tab-4" name="tabgroup" type="radio"> <label for="tab-4">YouTube</label>
 			<div class="tab__content">
-				<h3><i aria-hidden="true" class="fa fa-youtube-play"></i> YouTube</h3>
+				<br>
+				<h2><i aria-hidden="true" class="fa fa-youtube-play"></i> YouTube</h2>
 				<p><a href="https://www.youtube.com/watch?v=V49IovRSJDs">Ecological Succession</a></p>
 				<p><a href="https://www.youtube.com/watch?v=25Jzk7s635s">National Geographic Redwood Photograph with three Canon EOS 1Ds Mark II</a></p>
 				<p><a href="https://www.youtube.com/watch?v=sIoZ0J7x1Cg">Climbing the World's Tallest Tree: Hyperion Coast Redwood</a></p>
