--- a/redwoods.html
+++ b/redwoods.html
@@ -20,19 +20,20 @@
 	<center>
 		<a href="http://kironroy.github.io"><img alt="Kiron Roy Logo" src="logo_redwood.svg" style="width:110px;height:110px;"></a>
 	</center>
-	<center><h1>Redwood Guide<h1></center>
-
+	<center>
+		<h1>Redwood Guide</h1>
+	</center>
 	<div class="tabs" data-tabs="">
 		<div class="tab">
-			<input checked id="tab-1" name="tabgroup" type="radio"> <label for="tab-1"><i aria-hidden="true" class="fa fa-book"></i> Books</label>
+			<input checked id="tab-1" name="tabgroup" type="radio"> <label for="tab-1">Books</label>
 			<div class="tab__content">
 				<br>
 				<br>
-				<h3>Books</h3>
+				<h2><i aria-hidden="true" class="fa fa-book"></i> Books</h2>
 				<p><em><a href="http://jaredfarmer.net/books/trees-in-paradise/">Trees in Paradise: A California History</a></em></p><em></em>
 				<p><em><a href="https://en.wikipedia.org/wiki/The_Wild_Trees">The Wild Trees</a></em></p><em></em>
 				<p><em><a href="http://www.goodreads.com/book/show/695012.The_Last_Stand">The Last Stand: The War Between Wall Street and Main Street over California's Ancient Redwoods
-				<p><em><em></em></em></p></a></em> <em></em></p>
+				<p><em><em><em></em></em></em></p></a></em> <em></em></p>
 				<p><em><a href="http://www.cachumapress.com/catalog/coast-redwood.html">COAST REDWOOD A Natural and Cultural History</a></em></p><em></em>
 				<p><em><a href="http://www.goodreads.com/book/show/106327.Giants_in_the_Earth">Giants in the Earth: The California Redwoods</a></em></p><em></em>
 				<p><em><a href="http://www.goodreads.com/book/show/712044.From_the_Redwood_Forest">From the Redwood Forest: Ancient Trees, the Bottom Line, and a Headwaters Journey</a></em></p><em></em>
@@ -42,11 +43,11 @@
 			</div>
 		</div>
 		<div class="tab">
-			<input id="tab-2" name="tabgroup" type="radio"> <label for="tab-2"><i aria-hidden="true" class="fa fa-link"></i> Links</label>
+			<input id="tab-2" name="tabgroup" type="radio"> <label for="tab-2">Links</label>
 			<div class="tab__content">
 				<br>
 				<br>
-				<h3>Links</h3>
+				<h2><i aria-hidden="true" class="fa fa-link"></i> Links</h2>
 				<p><strong><a href="https://kironroy.github.io/comic">My Forest Trip!</a></strong></p>
 				<p><a href="https://repl.it/DbdW/12/">Redwoods Ruby programming</a></p>
 				<p><a href="http://www.mdvaden.com/redwood_hyperion.shtml">Hyperion Coast Redwood</a></p>
@@ -59,11 +60,11 @@
 			</div>
 		</div>
 		<div class="tab">
-			<input id="tab-3" name="tabgroup" type="radio"> <label for="tab-3"><i aria-hidden="true" class="fa fa-map"></i> Maps</label>
+			<input id="tab-3" name="tabgroup" type="radio"> <label for="tab-3">Maps</label>
 			<div class="tab__content">
 				<br>
 				<br>
-				<h3>Maps</h3>
+				<h2><i aria-hidden="true" class="fa fa-map"></i> Maps</h2>
 				<p><a href="http://famousredwoods.com/">All Redwoods</a></p>
 				<p><a href="https://www.google.com/maps/place/41%C2%B012'17.7%22N+124%C2%B000'56.0%22W/@41.20491,-124.0177487,689m/data=!3m2!1e3!4b1!4m5!3m4!1s0x0:0x0!8m2!3d41.20491!4d-124.01556">Hyperion Tree</a></p>
 				<p><a href="http://www.mendorailhistory.org/images/redwoods/NG_MapofRedwoods_lg.jpg">NATGEO Map (jpg)</a></p>
@@ -76,11 +77,11 @@
 			</div>
 		</div>
 		<div class="tab">
-			<input id="tab-4" name="tabgroup" type="radio"> <label for="tab-4"><i aria-hidden="true" class="fa fa-youtube-play"></i> YouTube</label>
+			<input id="tab-4" name="tabgroup" type="radio"> <label for="tab-4">YouTube</label>
 			<div class="tab__content">
 				<br>
 				<br>
-				<h3>YouTube</h3>
+				<h2><i aria-hidden="true" class="fa fa-youtube-play"></i> YouTube</h2>
 				<p><a href="https://www.youtube.com/watch?v=V49IovRSJDs">Ecological Succession</a></p>
 				<p><a href="https://www.youtube.com/watch?v=25Jzk7s635s">National Geographic Redwood Photograph with three Canon EOS 1Ds Mark II</a></p>
 				<p><a href="https://www.youtube.com/watch?v=sIoZ0J7x1Cg">Climbing the World's Tallest Tree: Hyperion Coast Redwood</a></p>
@@ -90,7 +91,7 @@
 				<p><a href="https://www.youtube.com/watch?v=V5T8WT_anfA">Screaming Titans</a></p>
 				<p><a href="https://www.youtube.com/watch?v=d8UnRI4QceI">Lost Monarch- World's Biggest Tree, Grove of Titans- Jed Smith Redwood Park</a></p>
 				<p><a href="https://www.youtube.com/watch?v=iNBBcN_SCNY">Stephen Sillett FINAL</a></p>
-				<p><a href="https://www.youtube.com/watch?v=1B1G_Ghh3Sc">Bury Me in Redwood Country</a></p>
+				<p><a href="https://www.youtube.com/watch?v=1B1G_Ghh2Sc">Bury Me in Redwood Country</a></p>
 				<p><a href="https://www.youtube.com/watch?v=wW9w6eCQQkU">One Man’s Mission to Revive the Last Redwood Forests | Short Film Showcase</a></p>
 				<p><a href="https://www.youtube.com/watch?v=PsrPTpg6mNo">4K, Redwoods National Park</a></p>
 				<p><a href="https://www.youtube.com/watch?v=FWi2bn40ma4">4K Redwood National and State Parks</a></p>
