--- a/index.html
+++ b/index.html
@@ -128,13 +128,13 @@
 							 <!-- Generator: Adobe Illustrator 14.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 43363)  -->
 							 <svg height="150px" id="Layer_1" version="1.1" viewbox="0 0 181 150" width="181px" x="0px" xmlns="http://www.w3.org/2000/svg" y="0px">
 							<g>
-								<path d="M128.757,52.844c0.438,1.008-0.103,1.833-1.2,1.833h-74.14c-1.1,0-1.62-0.816-1.155-1.812L64.451,26.7 c0.465-0.997,1.745-1.813,2.845-1.813h47.283c1.101,0,2.358,0.825,2.799,1.833L128.757,52.844z" fill="#CCCCCC"></path>
+								<path d="M128.757,52.844c0.438,1.008-0.103,1.833-1.2,1.833h-74.14c-1.1,0-1.62-0.816-1.155-1.812L64.451,26.7 c0.465-0.997,1.745-1.813,2.845-1.813h47.283c1.101,0,2.358,0.825,2.799,1.833L128.757,52.844z" fill="#F4F0ED"></path>
 							</g>
 							<g>
-								<path d="M6.66,43.691c0-2.15,1.821-3.909,4.046-3.909h159.588c2.226,0,4.046,1.759,4.046,3.909v79.566 c0,2.149-1.82,3.909-4.046,3.909H10.706c-2.225,0-4.046-1.76-4.046-3.909V43.691z" fill="#CCCCCC"></path>
+								<path d="M6.66,43.691c0-2.15,1.821-3.909,4.046-3.909h159.588c2.226,0,4.046,1.759,4.046,3.909v79.566 c0,2.149-1.82,3.909-4.046,3.909H10.706c-2.225,0-4.046-1.76-4.046-3.909V43.691z" fill="#F4F0ED"></path>
 							</g>
-							<circle cx="90.5" cy="84.02" fill="#333333" r="39.535"></circle>
-							<rect fill="#333333" height="59.062" width="167.68" x="6.66" y="52.833"></rect>
+							<circle cx="90.5" cy="84.02" fill="#101022" r="39.535"></circle>
+							<rect fill="#222222" height="59.062" width="167.68" x="6.66" y="52.833"></rect>
 							<g>
 								<g>
 									<circle cx="90.5" cy="84.02" fill="#DE3129" r="36.406"></circle>
@@ -150,30 +150,31 @@
 						<article class="item">
 							<a class="image fit" href="http://www.arcgis.com/apps/MapTour/index.html?appid=186a3c01f7fa4d7487b7f2befd0d0b5c"><!--**************************************SVG CODE AFTER THIS NOTE EURO *****************************************-->
 							 <!-- Generator: Adobe Illustrator 14.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 43363)  -->
+							 <!-- Generator: Adobe Illustrator 14.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 43363)  -->
 							 <svg height="150px" id="Layer_1" version="1.1" viewbox="0 0 181 150" width="181px" x="0px" xmlns="http://www.w3.org/2000/svg" y="0px">
 							<g>
-								<path d="M128.757,52.844c0.438,1.008-0.103,1.833-1.2,1.833h-74.14c-1.1,0-1.62-0.816-1.155-1.812L64.451,26.7 c0.465-0.997,1.745-1.813,2.845-1.813h47.283c1.101,0,2.358,0.825,2.799,1.833L128.757,52.844z" fill="#333333"></path>
+								<path d="M128.757,52.844c0.438,1.008-0.103,1.833-1.2,1.833h-74.14c-1.1,0-1.62-0.816-1.155-1.812L64.451,26.7 c0.465-0.997,1.745-1.813,2.845-1.813h47.283c1.101,0,2.358,0.825,2.799,1.833L128.757,52.844z" fill="#222222"></path>
 							</g>
 							<g>
-								<path d="M6.66,43.691c0-2.15,1.821-3.909,4.046-3.909h159.588c2.226,0,4.046,1.759,4.046,3.909v79.566 c0,2.149-1.82,3.909-4.046,3.909H10.706c-2.225,0-4.046-1.76-4.046-3.909V43.691z" fill="#333333"></path>
+								<path d="M6.66,43.691c0-2.15,1.821-3.909,4.046-3.909h159.588c2.226,0,4.046,1.759,4.046,3.909v79.566 c0,2.149-1.82,3.909-4.046,3.909H10.706c-2.225,0-4.046-1.76-4.046-3.909V43.691z" fill="#222222"></path>
 							</g>
-							<circle cx="90.5" cy="84.02" fill="#CCCCCC" r="39.535"></circle>
+							<circle cx="90.5" cy="84.02" fill="#F4F0ED" r="39.535"></circle>
 							<g>
 								<g>
 									<circle cx="90.095" cy="84.449" fill="#FFFFFF" r="29.578"></circle>
 								</g>
 							</g>
-							<rect fill="#CCCCCC" height="59.062" width="167.68" x="6.66" y="52.833"></rect>
+							<rect fill="#F4F0ED" height="59.062" width="167.68" x="6.66" y="52.833"></rect>
 							<circle cx="90.5" cy="84.02" fill="#000099" r="36.917"></circle>
 							<g>
 								<path d="M63.391,80.421c0.027,0,0.054,0,0.082,0 c0.32,1.056,0.629,2.119,0.955,3.16c1.051,0,2.105,0,3.159,0c0,0.026,0,0.058,0,0.083c-0.876,0.624-1.72,1.273-2.537,1.953 c0.29,1.055,0.654,2.04,0.916,3.119c-0.028,0-0.057,0-0.083,0c-0.775-0.653-1.604-1.246-2.409-1.873 c-0.886,0.572-1.673,1.238-2.493,1.873c-0.026,0-0.056,0-0.084,0c0.294-1.066,0.625-2.09,0.955-3.119 c-0.837-0.682-1.716-1.327-2.574-1.997c0-0.013,0-0.022,0-0.039c1.053,0,2.104,0,3.157,0C62.771,82.544,63.106,81.51,63.391,80.421 z" fill="#FFCC00" stroke="#000099" stroke-width="0.75"></path>
 								<path d="M117.525,80.421c0.021,0,0.056,0,0.082,0 c0.312,1.056,0.631,2.119,0.955,3.16c1.053,0,2.104,0,3.16,0c0,0.026,0,0.058,0,0.083c-0.877,0.624-1.729,1.273-2.533,1.953 c0.291,1.055,0.646,2.04,0.914,3.119c-0.027,0-0.062,0-0.084,0c-0.775-0.653-1.604-1.246-2.41-1.873 c-0.885,0.572-1.674,1.238-2.491,1.873c-0.024,0-0.056,0-0.084,0c0.301-1.066,0.627-2.09,0.955-3.119 c-0.837-0.682-1.718-1.327-2.575-1.997c0-0.013,0-0.022,0-0.039c1.055,0,2.107,0,3.16,0 C116.908,82.544,117.24,81.51,117.525,80.421z" fill="#FFCC00" stroke="#000099" stroke-width="0.75"></path>
-								<path d="M114.104,66.734c0.023,0,0.062,0,0.084,0 c0.315,1.054,0.625,2.115,0.953,3.158c1.051,0,2.105,0,3.16,0c0,0.028,0,0.057,0,0.085c-0.881,0.62-1.72,1.273-2.537,1.954 c0.289,1.054,0.656,2.032,0.918,3.116c-0.029,0-0.06,0-0.086,0c-0.775-0.652-1.604-1.249-2.408-1.87 c-0.886,0.571-1.672,1.233-2.494,1.87c-0.021,0-0.053,0-0.071,0c0.296-1.065,0.625-2.092,0.946-3.116 c-0.84-0.685-1.719-1.332-2.567-1.997c0-0.015,0-0.028,0-0.043c1.054,0,2.104,0,3.147,0 C113.482,68.859,113.818,67.823,114.104,66.734z" fill="#FFCC00" stroke="#000099" stroke-width="0.75"></path>
+								<path d="M114.104,66.734c0.023,0,0.062,0,0.084,0 c0.315,1.054,0.625,2.115,0.953,3.158c1.051,0,2.105,0,3.16,0c0,0.028,0,0.057,0,0.085c-0.881,0.62-1.72,1.273-2.537,1.954 c0.289,1.054,0.656,2.032,0.918,3.116c-0.029,0-0.06,0-0.086,0c-0.775-0.652-1.604-1.249-2.408-1.87 c-0.886,0.571-1.672,1.233-2.494,1.87c-0.021,0-0.053,0-0.07,0c0.296-1.065,0.625-2.092,0.945-3.116 c-0.84-0.685-1.719-1.332-2.566-1.997c0-0.015,0-0.028,0-0.043c1.055,0,2.104,0,3.146,0 C113.482,68.859,113.818,67.823,114.104,66.734z" fill="#FFCC00" stroke="#000099" stroke-width="0.75"></path>
 								<g>
 									<path d="M90.328,53.228c0.027,0,0.054,0,0.083,0 c0.316,1.052,0.628,2.113,0.956,3.159c1.052,0,2.104,0,3.158,0c0,0.023,0,0.052,0,0.082c-0.879,0.619-1.721,1.272-2.539,1.954 c0.293,1.054,0.656,2.033,0.921,3.116c-0.03,0-0.058,0-0.091,0c-0.771-0.652-1.604-1.249-2.405-1.871 c-0.888,0.571-1.672,1.237-2.494,1.871c-0.029,0-0.056,0-0.083,0c0.295-1.066,0.624-2.093,0.956-3.116 c-0.839-0.687-1.719-1.332-2.577-1.996c0-0.016,0-0.026,0-0.042c1.053,0,2.106,0,3.157,0 C89.71,55.349,90.044,54.313,90.328,53.228z" fill="#FFCC00" stroke="#000099" stroke-width="0.75"></path>
 								</g>
 								<g>
-									<path d="M90.328,107.357c0.027,0,0.054,0,0.083,0 c0.316,1.057,0.628,2.115,0.956,3.158c1.052,0,2.104,0,3.158,0c0,0.021,0,0.059,0,0.086c-0.879,0.609-1.721,1.271-2.539,1.953 c0.293,1.057,0.656,2.025,0.921,3.107c-0.03,0-0.058,0-0.091,0c-0.771-0.646-1.604-1.247-2.405-1.869 c-0.888,0.564-1.672,1.234-2.494,1.869c-0.029,0-0.056,0-0.083,0c0.295-1.062,0.624-2.092,0.956-3.107 c-0.839-0.688-1.719-1.328-2.577-1.992c0-0.021,0-0.029,0-0.047c1.053,0,2.106,0,3.157,0 C89.71,109.484,90.044,108.447,90.328,107.357z" fill="#FFCC00" stroke="#000099" stroke-width="0.75"></path>
+									<path d="M90.328,107.357c0.027,0,0.054,0,0.083,0 c0.316,1.057,0.628,2.115,0.956,3.158c1.052,0,2.104,0,3.158,0c0,0.021,0,0.059,0,0.086c-0.879,0.608-1.721,1.271-2.539,1.952 c0.293,1.058,0.656,2.025,0.921,3.107c-0.03,0-0.058,0-0.091,0c-0.771-0.646-1.604-1.247-2.405-1.869 c-0.888,0.563-1.672,1.233-2.494,1.869c-0.029,0-0.056,0-0.083,0c0.295-1.062,0.624-2.093,0.956-3.107 c-0.839-0.688-1.719-1.327-2.577-1.991c0-0.021,0-0.029,0-0.047c1.053,0,2.106,0,3.157,0 C89.71,109.484,90.044,108.447,90.328,107.357z" fill="#FFCC00" stroke="#000099" stroke-width="0.75"></path>
 								</g>
 								<g>
 									<path d="M66.932,93.742c0.027,0,0.058,0,0.083,0 c0.32,1.053,0.629,2.113,0.957,3.16c1.051,0,2.104,0,3.156,0c0,0.021,0,0.055,0,0.084c-0.877,0.619-1.718,1.271-2.534,1.953 c0.289,1.055,0.653,2.033,0.916,3.117c-0.029,0-0.057,0-0.084,0c-0.774-0.654-1.604-1.25-2.409-1.871 c-0.884,0.562-1.67,1.229-2.492,1.871c-0.028,0-0.056,0-0.083,0c0.295-1.066,0.623-2.104,0.956-3.117 c-0.838-0.688-1.718-1.332-2.574-1.998c0-0.021,0-0.025,0-0.039c1.052,0,2.104,0,3.155,0 C66.315,95.869,66.648,94.83,66.932,93.742z" fill="#FFCC00" stroke="#000099" stroke-width="0.75"></path>
@@ -188,10 +189,10 @@
 									<path d="M104.084,56.716c0.025,0,0.055,0,0.082,0 c0.318,1.052,0.628,2.114,0.957,3.159c1.048,0,2.105,0,3.158,0c0,0.025,0,0.056,0,0.083c-0.881,0.617-1.721,1.272-2.534,1.954 c0.286,1.054,0.653,2.032,0.913,3.118c-0.027,0-0.055,0-0.085,0c-0.773-0.656-1.603-1.25-2.409-1.872 c-0.887,0.568-1.671,1.235-2.49,1.872c-0.025,0-0.054,0-0.084,0c0.297-1.066,0.625-2.094,0.959-3.118 c-0.845-0.687-1.72-1.33-2.578-1.996c0-0.016,0-0.026,0-0.04c1.053,0,2.105,0,3.157,0 C103.465,58.841,103.797,57.802,104.084,56.716z" fill="#FFCC00" stroke="#000099" stroke-width="0.75"></path>
 								</g>
 								<g>
-									<path d="M114.104,93.986c0.023,0,0.062,0,0.084,0 c0.315,1.054,0.625,2.115,0.953,3.16c1.051,0,2.105,0,3.16,0c0,0.021,0,0.057,0,0.082c-0.881,0.619-1.72,1.271-2.537,1.953 c0.289,1.055,0.656,2.026,0.918,3.108c-0.029,0-0.06,0-0.086,0c-0.775-0.646-1.604-1.249-2.408-1.871 c-0.886,0.569-1.672,1.235-2.494,1.871c-0.021,0-0.053,0-0.071,0c0.296-1.062,0.625-2.093,0.946-3.108 c-0.84-0.688-1.719-1.332-2.567-1.996c0-0.021,0-0.026,0-0.039c1.054,0,2.104,0,3.147,0 C113.482,96.109,113.818,95.075,114.104,93.986z" fill="#FFCC00" stroke="#000099" stroke-width="0.75"></path>
+									<path d="M114.104,93.986c0.023,0,0.062,0,0.084,0 c0.315,1.054,0.625,2.115,0.953,3.16c1.051,0,2.105,0,3.16,0c0,0.021,0,0.057,0,0.082c-0.881,0.619-1.72,1.271-2.537,1.953 c0.289,1.055,0.656,2.025,0.918,3.107c-0.029,0-0.06,0-0.086,0c-0.775-0.646-1.604-1.249-2.408-1.871 c-0.886,0.569-1.672,1.234-2.494,1.871c-0.021,0-0.053,0-0.07,0c0.296-1.062,0.625-2.093,0.945-3.107 c-0.84-0.688-1.719-1.332-2.566-1.996c0-0.021,0-0.026,0-0.039c1.055,0,2.104,0,3.146,0 C113.482,96.109,113.818,95.075,114.104,93.986z" fill="#FFCC00" stroke="#000099" stroke-width="0.75"></path>
 								</g>
 								<g>
-									<path d="M76.955,103.695c0.027,0,0.057,0,0.083,0 c0.318,1.055,0.629,2.115,0.958,3.158c1.051,0,2.104,0,3.155,0c0,0.021,0,0.055,0,0.082c-0.876,0.619-1.718,1.271-2.533,1.953 c0.289,1.057,0.655,2.029,0.914,3.109c-0.026,0-0.057,0-0.083,0c-0.774-0.646-1.605-1.251-2.411-1.857 c-0.882,0.562-1.67,1.229-2.491,1.857c-0.028,0-0.056,0-0.083,0c0.295-1.062,0.624-2.089,0.956-3.109 c-0.839-0.688-1.718-1.328-2.576-1.994c0-0.021,0-0.023,0-0.041c1.052,0,2.104,0,3.158,0 C76.333,105.816,76.671,104.782,76.955,103.695z" fill="#FFCC00" stroke="#000099" stroke-width="0.75"></path>
+									<path d="M76.955,103.695c0.027,0,0.057,0,0.083,0 c0.318,1.055,0.629,2.115,0.958,3.158c1.051,0,2.104,0,3.155,0c0,0.021,0,0.055,0,0.082c-0.876,0.618-1.718,1.271-2.533,1.952 c0.289,1.058,0.655,2.029,0.914,3.109c-0.026,0-0.057,0-0.083,0c-0.774-0.646-1.605-1.251-2.411-1.856 c-0.882,0.562-1.67,1.229-2.491,1.856c-0.028,0-0.056,0-0.083,0c0.295-1.062,0.624-2.089,0.956-3.109 c-0.839-0.688-1.718-1.327-2.576-1.993c0-0.021,0-0.023,0-0.041c1.052,0,2.104,0,3.158,0 C76.333,105.816,76.671,104.782,76.955,103.695z" fill="#FFCC00" stroke="#000099" stroke-width="0.75"></path>
 								</g>
 								<g>
 									<path d="M104.084,104.184c0.025,0,0.055,0,0.082,0 c0.318,1.062,0.628,2.112,0.957,3.157c1.048,0,2.105,0,3.158,0c0,0.028,0,0.06,0,0.086c-0.881,0.616-1.721,1.272-2.534,1.952 c0.286,1.055,0.653,2.032,0.913,3.115c-0.027,0-0.055,0-0.085,0c-0.773-0.648-1.603-1.248-2.409-1.869 c-0.887,0.57-1.671,1.234-2.49,1.869c-0.025,0-0.054,0-0.084,0c0.297-1.062,0.625-2.09,0.959-3.115 c-0.845-0.686-1.72-1.33-2.578-1.997c0-0.013,0-0.026,0-0.041c1.053,0,2.105,0,3.157,0 C103.465,106.307,103.797,105.271,104.084,104.184z" fill="#FFCC00" stroke="#000099" stroke-width="0.75"></path>
@@ -354,7 +355,7 @@
 		<section class="three" id="about">
 			<div class="container">
 				<header>
-					<h2><span style="color: white;">Cities</span></h2>
+					<h2>Cities</h2>
 				</header>
 				<p><span style="color: white;"></span></p><!-- **************** MAP BOX MAP STARTS HERE*******************************-->
 				<iframe frameborder='0' height='500px' src='https://a.tiles.mapbox.com/v4/kironroymaps.mlmapmmp/attribution,zoompan,zoomwheel,geocoder,share.html?access_token=pk.eyJ1Ijoia2lyb25yb3ltYXBzIiwiYSI6Ijg1MzYyYjYxOGUyZTZmZjQ2MTBjY2EyNGFiNjU2YTUwIn0.xZ6rI7mUH2xSewoxdm_GkQ' width='100%'></iframe> <!-- ********* FULL SCREEN VIEW LINK BELOW THIS NOTE ****-->
@@ -368,7 +369,7 @@
 			<div class="container">
 				<header>
 					<h2>Contact</h2>
-					<p><span style="color:#BAB0AE"><a href="https://kironroy.github.io/archives2">.</a></span></p><a class="button scrolly" href="mailto:kironroynet@gmail.com?Subject=Regarding%20your%20portfolio:"><span style="color:black">email</span></a>
+					<p><span style="color:#958D8B;"><a href="https://kironroy.github.io/archives2">.</a></span></p><a class="button scrolly" href="mailto:kironroynet@gmail.com?Subject=Regarding%20your%20portfolio:"><span style="color:black">email</span></a>
 				</header>
 			</div>
 		</section>
